--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,16 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dev-dependencies]
+criterion = "0.4.0"
+
+[[bench]]
+name = "bench_maps"
+harness = false
+
 [dependencies]
 anyhow = "1.0.69"
-chrono = { version = "0.4.23", features = ["serde","rkyv"] }
+chrono = { version = "0.4.23", features = ["serde"] }
 csv = "1.2.1"
 derive_more = "0.99.17"
 fern = "0.6.1"
@@ -15,6 +22,7 @@ lazy_static = "1.4.0"
 log = "0.4.17"
 num-derive = "0.3.3"
 num-traits = "0.2.15"
+rand = "0.8.5"
 # num-traits = { version = "0.2.15", features = ["std"] }
 # { version = "0.4.0", features = ["num-traits", "num-derive"] }
 regex = "1.7.1"
