before switch from rkyv

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+lto = true
+
 [dev-dependencies]
 criterion = "0.4.0"
 
@@ -28,4 +31,5 @@ rand = "0.8.5"
 regex = "1.7.1"
 rkyv = { version = "0.7.40", features = ["validation"] }
 serde = { version = "1.0.154", features = ["derive"] }
+speedy = "0.8.6"
 walkdir = "2.3.2"
