--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ lazy_static = "1.4.0"
 log = "0.4.17"
 num-derive = "0.3.3"
 num-traits = "0.2.15"
+paste = "1.0.12"
 rand = "0.8.5"
 # num-traits = { version = "0.2.15", features = ["std"] }
 # { version = "0.4.0", features = ["num-traits", "num-derive"] }
