--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ rand = "0.8.5"
 # { version = "0.4.0", features = ["num-traits", "num-derive"] }
 regex = "1.7.1"
 serde = { version = "1.0.154", features = ["derive"] }
+serde_json = "1.0.95"
 speedy = "0.8.6"
 walkdir = "2.3.2"
 
